# PGPBXToCMake

./: CMakeLists.txt  LICENSE  README.md
PGPBXToCMake/: CMakeLists.txt  Sample.xml  main.m
PGPBXToCMake.xcodeproj/: project.pbxproj
PGPBXToCMake.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PGPBXToCMake.xcodeproj/xcuserdata/grhodes.xcuserdatad/xcschemes/: xcschememanagement.plist
PGPBXToCMake/PBX/: PBX.h  PBX.m  PBXAggregateTarget.h  PBXAggregateTarget.m  PBXAppleScriptBuildPhase.h  PBXAppleScriptBuildPhase.m  PBXBuildFile.h  PBXBuildFile.m  PBXBuildPhase.h  PBXBuildPhase.m  PBXBuildRule.h  PBXBuildRule.m  PBXContainerItemProxy.h  PBXContainerItemProxy.m  PBXCopyFilesBuildPhase.h  PBXCopyFilesBuildPhase.m  PBXFileElement.h  PBXFileElement.m  PBXFileReference.h  PBXFileReference.m  PBXFrameworksBuildPhase.h  PBXFrameworksBuildPhase.m  PBXGroup.h  PBXGroup.m  PBXHeadersBuildPhase.h  PBXHeadersBuildPhase.m  PBXLegacyTarget.h  PBXLegacyTarget.m  PBXNativeTarget.h  PBXNativeTarget.m  PBXNativeTargetAttribs.h  PBXNativeTargetAttribs.m  PBXProject.h  PBXProject.m  PBXProjectAttributes.h  PBXProjectAttributes.m  PBXResourcesBuildPhase.h  PBXResourcesBuildPhase.m  PBXRoot.h  PBXRoot.m  (+14 more)
PGPBXToCMake/SupportingFiles/: Sample.plist
